[workspace]
resolver = "2"
members = [
	"elastigneiss/elasti-gneiss-aws-threaded",
	"elastigneiss/elasti-gneiss-aws-tokio",
	"elastigneiss/elasti-gneiss-core",
	"elastigneiss/elasti-gneiss-core-async",
	"elastigneiss/elasti-gneiss-core-sync",
	"elastigneiss/elasti-gneiss-threaded",
	"elastigneiss/elasti-gneiss-tokio",
	"gneiss-mqtt",
	"gneiss-mqtt-aws",
	"gneiss-mqtt-aws/examples/tokio/custom-auth-signed",
	"gneiss-mqtt-aws/examples/tokio/custom-auth-unsigned",
	"gneiss-mqtt-aws/examples/tokio/mtls",
	"gneiss-mqtt-aws/examples/tokio/websockets",
]