[workspace]
resolver = "2"
members = [
	"elastigneiss/elasti-gneiss-aws-threaded",
	"elastigneiss/elasti-gneiss-aws-tokio",
	"elastigneiss/elasti-gneiss-core",
	"elastigneiss/elasti-gneiss-core-async",
	"elastigneiss/elasti-gneiss-core-sync",
	"elastigneiss/elasti-gneiss-threaded",
	"elastigneiss/elasti-gneiss-tokio",
	"gneiss-mqtt",
	"gneiss-mqtt/examples/connect-plaintext-threaded",
	"gneiss-mqtt/examples/connect-plaintext-tokio",
	"gneiss-mqtt/examples/connect-proxy-threaded",
	"gneiss-mqtt/examples/connect-proxy-tokio",
	"gneiss-mqtt/examples/connect-tls-threaded",
	"gneiss-mqtt/examples/connect-tls-tokio",
	"gneiss-mqtt/examples/connect-websockets-threaded",
	"gneiss-mqtt/examples/connect-websockets-tokio",
	"gneiss-mqtt-aws",
	"gneiss-mqtt-aws/examples/aws-custom-auth-signed-threaded",
	"gneiss-mqtt-aws/examples/aws-custom-auth-signed-tokio",
	"gneiss-mqtt-aws/examples/aws-custom-auth-unsigned-threaded",
	"gneiss-mqtt-aws/examples/aws-custom-auth-unsigned-tokio",
	"gneiss-mqtt-aws/examples/aws-mtls-threaded",
	"gneiss-mqtt-aws/examples/aws-mtls-tokio",
	"gneiss-mqtt-aws/examples/aws-websockets-tokio",
]