[package]
name = "elasti-gneiss-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasti-gneiss-core = { path = "../elasti-gneiss-core" }
gneiss-mqtt = { path = "../gneiss-mqtt" }
gneiss-mqtt-aws = { path = "../gneiss-mqtt-aws" }
tokio = { version = "1", features = ["full"] }
simplelog = { version = "0.12" }
argh = { version = "0.1" }
url = { version = "2.5" }
