[package]
name = "elasti-gneiss-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = { version = "0.1" }
gneiss-mqtt = { path = "../gneiss-mqtt" }
tokio = { version = "1", features = ["full"] }
