[package]
name = "gneiss-mqtt-aws"
license = "Apache-2.0"
version = "0.3.0"
edition = "2021"
keywords = ["mqtt", "mqtt5", "iot", "aws", "iotcore"]
categories = [ "asynchronous", "network-programming", "web-programming::websocket"]
description = "AWS IoT Core specific builders for asynchronous and threaded MQTT clients"
homepage = "https://github.com/gneiss-mqtt/gneiss-mqtt"
documentation = "https://docs.rs/gneiss-mqtt-aws"
repository = "https://github.com/gneiss-mqtt/gneiss-mqtt"
readme = "README.md"

[package.metadata.docs.rs]
features = []
all-features = true

[features]
default = []
testing = [] # enable when running tests to also run environmentally-controlled integration tests
tokio-rustls = [ "dep:tokio", "gneiss-mqtt/tokio-rustls" ]
tokio-native-tls = [ "dep:tokio", "gneiss-mqtt/tokio-native-tls" ]
tokio-websockets = [
    "dep:tokio",
    "gneiss-mqtt/tokio-websockets",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-runtime-api",
    "dep:http",
]

[dependencies]
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", optional = true }
gneiss-mqtt = { path = "../gneiss-mqtt" }
http = { version = "0.2", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
urlencoding = { version = "2" }
uuid = { version = "1", features = [ "v4", "fast-rng" ] }