[package]
name = "gneiss-mqtt"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["mqtt", "mqtt5", "iot", "aws", "iotcore"]
categories = [ "asynchronous", "network-programming", "web-programming::websocket"]
description = "Asynchronous and threaded MQTT(5) clients"
homepage = "https://github.com/gneiss-mqtt/gneiss-mqtt"
documentation = "https://docs.rs/gneiss-mqtt"
repository = "https://github.com/gneiss-mqtt/gneiss-mqtt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lru = { version = "0.12" }
log = { version = "0.4" }
rand = { version = "0.8" }
rustls = { version = "0.22", default-features = false }
tokio-rustls = { version = "0.25" }
rustls-native-certs = { version = "0.7" }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2"