[package]
name = "gneiss-mqtt"
license = "Apache-2.0"
version = "0.3.0"
edition = "2021"
keywords = ["mqtt", "mqtt5", "iot", "aws", "iotcore"]
categories = [ "asynchronous", "network-programming", "web-programming::websocket"]
description = "Asynchronous and threaded MQTT(5) clients"
homepage = "https://github.com/gneiss-mqtt/gneiss-mqtt"
documentation = "https://docs.rs/gneiss-mqtt"
repository = "https://github.com/gneiss-mqtt/gneiss-mqtt"
readme = "README.md"

[package.metadata.docs.rs]
features = []
all-features = true

[features]
testing = [] # enables environmentally-controlled integration tests and long-running tests (30+ seconds) that check reconnect, backoff, etc...
tokio-rustls = ["tokio", "dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:tokio-rustls"]
tokio-native-tls = ["tokio", "dep:native-tls", "dep:tokio-native-tls"]
tokio-websockets = ["tokio", "dep:http", "dep:tungstenite", "dep:tokio-tungstenite", "dep:stream-ws"]
tokio = ["dep:tokio"]

[dev-dependencies]
assert_matches = "1.5.0"
uuid = { version = "1", features = [ "v4", "fast-rng" ] }

[dependencies]
futures = {  version = "0.3.30", optional = true }
http = { version = "0.2", optional = true }
httparse = { version = "1" }
lru = { version = "0.12" }
log = { version = "0.4" }
native-tls = { version = "0.2.11", optional = true, features = ["alpn"] }
rand = { version = "0.8" }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }
stream-ws = { version = "0.1.1", features = ["tungstenite", "tokio"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-native-tls = { version = "0.3.1", optional = true}
tokio-rustls = { version = "0.26", optional = true }
tokio-tungstenite = { version = "0.20" , optional = true }
tungstenite = { version = "0.20", optional = true }




